--- a/site.yaml
+++ b/site.yaml
@@ -12,6 +12,7 @@ context:
             name: Your Name Here
             url: "http://example.com"
         google_analytics_id: UA-XXXXX-YY
+        nav_hover: yes
         home_url: index.html
         menu:
             - title: Hero
